# lake-connector

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: read_and_encode.py
src/lake_connector/: __init__.py  config.py  distributed_encoder.py  pipeline.py  reader.py  spark_session.py
