[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lake-connector"
version = "0.1.0"
description = "A PySpark-based connector for reading Data Lake columnar storage and converting to pandas."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Lake Connector Contributors" }
]
dependencies = [
  "pandas>=2.0.0",
  "pyspark>=3.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
